Error if the stubbed httr is detected to be in a stuck state

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: vcr
 Title: Record httr calls and play back the tapes
-Version: 0.0.0.9000
-Authors@R: person("First", "Last", email = "first.last@example.com", role = c("aut", "cre"))
+Version: 0.0.0.9001
+Authors@R: person("Peter", "Hurford", email = "peter@peterhurford.com", role = c("aut", "cre"))
 Description: Capture httr calls as output suitable for making mocks in testthat
 Depends: R (>= 3.4.1)
 License: MIT + file LICENSE
